--- a/Pages/Disaster/Profile/informationboard/Index.cshtml
+++ b/Pages/Disaster/Profile/informationboard/Index.cshtml
@@ -56,28 +56,23 @@
 		<!-- Page Content -->
 		<div class="col-md-9 ms-sm-auto col-lg-10 px-md-4 pb-3 pt-3">
 			<div class="container">
-				<!-- Breadcrumb -->
-				<div class="row">
-					<div class="breadcrumb-container">
-						<div aria-label="breadcrumb">
-							<ol class="breadcrumbs">
-								<li><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
-								<li class="divider"> > </li>
-								<li><a href="/disaster/index">Disaster</a></li>
-								<li class="divider"> > </li>
-								<li><a href="/disaster/profile/index?disasterID=@Model.logInfo.disasterID">@Model.logInfo.disasterName</a></li>
-								<li class="divider"> > </li>
-								<li><a class="active"><strong>@Model.logInfo.centerName</strong></a></li>
-							</ol>
-						</div>
-					</div>
-				</div>
+                <!-- Breadcrumb -->
+                <div class="row pb-2" aria-label="breadcrumb">
+                    <nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></l>
+                            <li class="breadcrumb-item"><a href="/disaster/index">Disaster</a></li>
+                            <li class="breadcrumb-item"><a href="/disaster/profile/index?disasterID=@Model.logInfo.disasterID">@Model.logInfo.disasterName</a></li>
+                            <li class="breadcrumb-item active"><a><strong>@Model.logInfo.centerName</strong></a></li>
+                        </ol>
+                    </nav>
+                </div>
 
-				<div class="row p-2">
+				<div class="row pb-2">
 					<div class="col-lg-12 ec-info">
 
                         <div>
-                            <h2 class="text-dark pb-2">Sample Evacuation Center</h2>
+                            <h1>Sample Evacuation Center</h1>
                             <p>123 Sample St., San Delmonte, Bulacan</p>
                             <p>Gymnasium</p>
                             <p>123-345-89 / 0917-123-1234</p>
