--- a/Pages/disaster/profile/reliefdistribution/Index.cshtml
+++ b/Pages/disaster/profile/reliefdistribution/Index.cshtml
@@ -4,31 +4,40 @@
 	ViewData["Title"] = "Relief Distribution";
 }
 
-<div class="container p-2">
-
-	<div class="row">
-		<ul class="breadcrumbs">
-			<li><a href="#">Disaster</a></li>
-			<li class="divider">/</li>
-			<li><a href="#" class="active">Typhoon Pedro</a></li>
-		</ul>
-
-		<div class="col d-flex align-items-center">
-			<h1>Relief Distribution</h1>
+<!-- Page Content -->
+<div class="col-md-9 ms-sm-auto col-lg-10 px-md-4 pb-3 pt-3">
+	<div class="container">
+		<!-- Breadcrumb -->
+		<div class="row pb-2" aria-label="breadcrumb">
+			<nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
+				<ol class="breadcrumb">
+					<li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></l>
+					<li class="breadcrumb-item"><a href="/disaster/index">Disaster</a></li>
+					<li class="breadcrumb-item"><a href="/disaster/profile"></a>Typhoon Pedro</li>
+					<li class="breadcrumb-item active"><a><strong>Sample Evacuation Center</strong></a></li>
+				</ol>
+			</nav>
 		</div>
 
-		<div class="col-auto d-flex justify-content-between align-items-center" style="gap: 5px">
-			<a class="btn btn-primary mb-2" href="/disaster/checkinevacuee">
-				<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add
-			</a>
+		<div class="row pb-2">
+			<div class="col-12 d-flex justify-content-between align-items-center" style="gap: 5px">
+				<div class="d-flex align-items-center">
+					<h1>Entry Log</h1>
+				</div>
 
-			<button type="button" class="btn btn-primary mb-2" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>
-				Edit Record
-			</button>
+				<!-- Check-In and Check-Out Buttons -->
+				<div class="d-flex justify-content-between align-items-center">
+					<a id="checkInButton" class="btn btn-primary mb-2" href="/disaster/profile/reliefdistribution/Add">
+						<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add
+					</a>
+					<button style="display: none;" type="button" class="btn btn-danger mb-2" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>
+						Edit
+					</button>
+				</div>
+			</div>
 		</div>
-	</div>
 
-	<div class="row p-2">
+		<!-- Table -->
 		<div class="col-lg-12">
 			<table id="distribution-table" class="table display nowrap compact order-column" cellspacing="0" width="100%">
 				<thead>
