--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -7,12 +7,12 @@
     list-style: none;
     text-decoration: none;
     transition: 0.3s linear;
+    font-family: 'Poppins', sans-serif !important;
 }
 
 :root {
     --bs-primary-color: #3F8F8B;
 }
-
 
 h1 {
     font-weight: 700;
@@ -58,35 +58,16 @@ body {
     margin: 20px 10px; /* Add margin to create spacing between buttons */
 }
 
-.breadcrumb-container {
-    border: 1px solid #E9ECEF;
-    border-radius: 10px;
-    padding: 15px 10px 0 10px;
-    margin: 0 0 10px 0;
-    display: inline-flex;
-    box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
-}
+/*BREADCRUMB*/
 
-.breadcrumbs {
-    display: flex;
-    grid-gap: 6px;
-    padding: 0 0 0 0;
-}
-
-.breadcrumbs li a {
+.breadcrumb-item a {
     color: #6c757d;
     text-decoration: none;
+    font-size: 1rem;
 }
 
-.breadcrumbs li.divider {
+.breadcrumb-item::before {
     color: #6c757d;
-    pointer-events: none;
-}
-
-.breadcrumbs li a.active {
-    color: #3F8F8B;
-    font-weight: bold;
-    pointer-events: none;
 }
 
 /*SIDEBAR*/
@@ -94,7 +75,6 @@ body {
     padding-top: 30px;
     padding-left: 20px;
 }
-
 /*ADD PACK*/
 
 .label-pack {
