--- a/Pages/disaster/profile/reliefdistribution/Index.cshtml
+++ b/Pages/disaster/profile/reliefdistribution/Index.cshtml
@@ -13,8 +13,8 @@
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></l>
 					<li class="breadcrumb-item"><a href="/disaster/index">Disaster</a></li>
-					<li class="breadcrumb-item"><a href="/disaster/profile"></a>Typhoon Pedro</li>
-					<li class="breadcrumb-item active"><a><strong>Sample Evacuation Center</strong></a></li>
+					<li class="breadcrumb-item"><a href="/disaster/profile">Very Long Long Text Text Text Text Text</a></li>
+					<li class="breadcrumb-item active"><a><strong>Sample Evacuation Center Times 2 Times 3 Times 4 Times 1</strong></a></li>
 				</ol>
 			</nav>
 		</div>
@@ -22,7 +22,7 @@
 		<div class="row pb-2">
 			<div class="col-12 d-flex justify-content-between align-items-center" style="gap: 5px">
 				<div class="d-flex align-items-center">
-					<h1>Entry Log</h1>
+					<h1>Relief Distribution</h1>
 				</div>
 
 				<!-- Check-In and Check-Out Buttons -->
