--- a/Pages/disaster/profile/reliefdistribution/Index.cshtml
+++ b/Pages/disaster/profile/reliefdistribution/Index.cshtml
@@ -11,7 +11,7 @@
 		<div class="row pb-2" aria-label="breadcrumb">
 			<nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
 				<ol class="breadcrumb">
-					<li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></l>
+					<li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
 					<li class="breadcrumb-item"><a href="/disaster/index">Disaster</a></li>
 					<li class="breadcrumb-item"><a href="/disaster/profile">Very Long Long Text Text Text Text Text</a></li>
 					<li class="breadcrumb-item active"><a><strong>Sample Evacuation Center Times 2 Times 3 Times 4 Times 1</strong></a></li>
