--- a/Pages/Disaster/Profile/Index.cshtml
+++ b/Pages/Disaster/Profile/Index.cshtml
@@ -47,19 +47,16 @@
 
 <div class="content">
     <input type="hidden" name="disasterID" value="@Model.disasterInfo.disasterID" />
+
     <!-- Breadcrumb -->
-    <div class="row p-2">
-        <div class="breadcrumb-container">
-            <div aria-label="breadcrumb">
-                <ol class="breadcrumbs">
-                    <li><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
-                    <li class="divider"> > </li>
-                    <li><a href="/disaster/index">Disaster</a></li>
-                    <li class="divider"> > </li>
-                    <li><a class="active">@Model.disasterInfo.disasterName</a></li>
-                </ol>
-            </div>
-        </div>
+    <div class="row pb-2" aria-label="breadcrumb">
+        <nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
+                <li class="breadcrumb-item"><a href ="/index">Disaster</a></li>
+                <li class="breadcrumb-item active"><a><strong>@Model.disasterInfo.disasterName</strong></a></li>
+            </ol>
+        </nav>
     </div>
 
     <!-- Title, Info Button, Menu Button -->
