--- a/Pages/Family/Index.cshtml
+++ b/Pages/Family/Index.cshtml
@@ -94,16 +94,13 @@
 
 <div class="content">
 	<!-- Breadcrumb -->
-	<div class="row p-2">
-		<div class="breadcrumb-container">
-			<div aria-label="breadcrumb">
-				<ol class="breadcrumbs">
-					<li><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
-					<li class="divider"> > </li>
-					<li><a class="active">Family</a></li>
-				</ol>
-			</div>
-		</div>
+	<div class="row pb-2" aria-label="breadcrumb">
+		<nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
+			<ol class="breadcrumb">
+				<li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
+				<li class="breadcrumb-item active"><a><strong>Disaster</strong></a></li>
+			</ol>
+		</nav>
 	</div>
 
 
