--- a/Pages/Inventory/Index.cshtml
+++ b/Pages/Inventory/Index.cshtml
@@ -4,29 +4,37 @@
 	ViewData["Title"] = "Inventory";
 }
 
-<div class="container p-2">
+<div class="content">
+    <!-- Breadcrumb -->
+    <div class="row pb-2" aria-label="breadcrumb">
+        <nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
+                <li class="breadcrumb-item active"><a><strong>Inventory</strong></a></li>
+            </ol>
+        </nav>
+    </div>
 
-	<div class="row">
-		<ul class="breadcrumbs">
-			<li><a href="#" class="active">Inventory</a></li>
-		</ul>
 
-		<div class="col d-flex align-items-center">
-            <h1><i class="bi bi-box-seam-fill" style="margin-right: 5px"></i>Inventory</h1>
-		</div>
+    <!-- Title and Add Button-->
+    <div class="row p-2">
+        <div class="col d-flex align-items-center">
+            <h1>Inventory</h1>
+        </div>
 
-		<div class="col-auto d-flex justify-content-between align-items-center">
-			<div class="d-flex justify-content-end align-items-center">
-				<a class="btn btn-primary mb-2" href="/inventory/add">
-					<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Batch
-				</a>
-			</div>
-		</div>
-	</div>
+        <div class="col-auto d-flex justify-content-between align-items-center">
+            <div class="d-flex justify-content-end align-items-center">
+                <a class="btn btn-primary mb-2" href="/inventory/add">
+                    <i class="bi bi-plus-circle pt" style="padding: 5px;"></i>
+                    Add Batch
+                </a>
+            </div>
+        </div>
+    </div>
 
     <div class="row p-2">
         <div class="col-lg-12">
-            <table id="disaster-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
+            <table id="inventory-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
                 <thead>
                     <tr>
                         <th width="5%">#</th>
@@ -77,7 +85,7 @@
 <!-- Making the table responsive -->
 <script>
 	$(document).ready(function () {
-		$('#disaster-table').DataTable({
+		$('#inventory-table').DataTable({
 			responsive: true,
 			columnDefs: [
 				{ "orderable": true, "targets": [0, 1, 2, 3, 4, 5, 6, 7] }, // Sortable columns
