--- a/Pages/disaster/profile/staffassignment/Index.cshtml
+++ b/Pages/disaster/profile/staffassignment/Index.cshtml
@@ -98,7 +98,7 @@
 				<div class="row pb-3" aria-label="breadcrumb">
 					<nav style="--bs-breadcrumb-divider: '/';" aria-label="breadcrumb">
 						<ol class="breadcrumb">
-							<li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></l>
+							<li class="breadcrumb-item"><a href="/index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
 							<li class="breadcrumb-item"><a href="/disaster/index">Disaster</a></li>
 							<li class="breadcrumb-item"><a href="/disaster/profile/index?disasterID=@Model.logInfo.disasterID">@Model.logInfo.disasterName</a></li>
 							<li class="breadcrumb-item active"><a><strong>@Model.logInfo.centerName</strong></a></li>
