--- a/Pages/evacuationcenter/Index.cshtml
+++ b/Pages/evacuationcenter/Index.cshtml
@@ -57,7 +57,7 @@
 	<!-- Title and Add Button-->
 	<div class="row p-2">
 		<div class="col d-flex align-items-center">
-			<h1>Evacuation Center</h1>
+			<h1><i class="bi bi-building-fill"></i>Evacuation Center</h1>
 		</div>
 
 		<div class="col-auto d-flex justify-content-between align-items-center">
