--- a/Pages/Disaster/Profile/informationboard/Index.cshtml
+++ b/Pages/Disaster/Profile/informationboard/Index.cshtml
@@ -196,6 +196,7 @@
 	</div>
 </div>
 
+<!-- Sidebar (Mobile) -->
 <script>
 	// Get the current page URL
 	var currentPage = window.location.pathname.toLowerCase();
